<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InstaMelb</string>
    <string name="title_activity_main">InstaMelb</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sub">SubActivity</string>
    <string name="next">TouchProcessingActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="search_movies">Search Movies</string>
    <string name="logout">Log Out</string>
    <string name="about">About</string>

    <string-array name="tabs">
        <item>TAB 1</item>
        <item>TAB 2</item>
        <item>TAB 3</item>
        <item>TAB 4</item>
        <item>TAB 5</item>
        <item>TAB 6</item>
    </string-array>

    <string name="title_activity_activity_using_tab_library">SlidingTabLayoutActivity</string>
    <string name="action_tabs_using_library">SlidingTabLayoutExample</string>
    <string name="title_activity_vector_test">VectorTestActivity</string>
    <string name="action_vector_test_activity">VectorTestActivity</string>
    <string name="error_timeout">Oops! Your Connection Timed Out</string>
    <string name="error_auth_failure">Oops! RottenTomatoes Says It Doesn\'t Recognize You</string>
    <string name="error_network">Oops! RottenTomatoes Server Just Messed Up</string>
    <string name="error_parser">Oops! Data Received Was An Unreadable Mess</string>
    <string name="title_activity_dynamic_tabs">Dynamic Tabs</string>
    <string name="add_tab">Add Tab</string>
    <string name="action_dynamic_tabs_activity">Dynamic Tabs</string>
    <string name="title_activity_recycler_item_animations">RecyclerItemAnimations
    </string>
    <string name="action_recycler_item_animations">RecyclerItemAnimator</string>
    <string name="action_add">+</string>
    <string name="action_remove">-</string>
    <string name="add_item">Add Item</string>
    <string name="title_activity_activity_calling">Content A</string>
    <string name="title_activity_activity_called">Content B</string>
    <string name="action_activity_calling">ContentTransitions</string>
    <string name="title_activity_activity_shared">Shared A</string>
    <string name="title_activity_activity_shared_b">Shared B</string>
    <string name="action_shared_transitions">SharedElementsTransition</string>

    <string name="action_follow">Follow</string>
    <string name="action_unfollow">Unfollow</string>
    <string name="details">DETAILS</string>
    <string name="friends_count">Following</string>
    <string name="following_count">Followers</string>
    <string name="favorites_count">Likes</string>
    <string name="location">LOCATION</string>
    <string name="action_change">Change Image</string>
    <string name="status_count">Photos</string>
    <string name="loading">Loading</string>
    <string name="title_activity_activity_profile">ActivityProfile</string>
    <string name="title_activity_activity_detail">ActivityDetail</string>
    <string name="selection"></string>
    <string name="library">LIBRARY</string>
    <string name="photo">PHOTO</string>
    <string name="video">VIDEO</string>
    <string name="caption_prompt">CAPTION:</string>
    <string name="caption">CAPTION</string>
    <string name="brightness">BRIGHTNESS</string>
    <string name="contrast">CONTRAST</string>
    <string name="reset">RESET</string>
    <string name="gray">GRAY</string>
    <string name="warm">WARM</string>
    <string name="cool">COOL</string>
    <string name="edit">EDIT</string>
    <string name="upload">UPLOAD</string>
    <string name="add_caption">ADD CAPTION</string>


    <string name="element_text">Element</string>
    <string name="grid_layout_manager">Grid Layout Manager</string>
    <string name="linear_layout_manager">Linear Layout Manager</string>
</resources>
